# PySide6-Ela

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
scripts/: build.py  gen_xml.py  local_build.py
src/PySide6_Ela/: __init__.py
