[project]
name = "PySide6-Ela"
version = "0.1.1"
description = "Python binding for ElaWidgetTools based on PySide6"
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-only"

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["PySide6==6.6.2"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["PySide6_Ela"]

[tool.setuptools.package-data]
PySide6_Ela = ["*.pyd", "*.so", "*.pyi"]

[dependency-groups]
dev = [
    "PySide6==6.6.2",
    "shiboken6==6.6.2",
    "shiboken6-generator==6.6.2",
    "aqtinstall",
    "ninja",
    "mypy",
    "wheel",
    "auditwheel",
]
